// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders 1`] = `
[
  <button
    class="sc-bgqQcB cRBzGi"
  >
    Text
  </button>,
]
`;

exports[`Button Renders primary 1`] = `
[
  <button
    class="sc-bgqQcB jVNJGw"
  >
    Text
  </button>,
]
`;

exports[`Button Renders secondary 1`] = `
[
  <button
    class="sc-bgqQcB cRBzGi"
  >
    Text
  </button>,
]
`;
